Adding logging and register

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <resources>
     <string name="app_name">KizinLakay</string>
-//Show Icon Hamburger
+    //Show Icon Hamburger
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
     <string name="listmenu">Catégories de Mets</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
